# tek2

./: README.md
Semester4/CNA/groundhog/: Makefile  calculation.py  groundhog.py  process.py  test_output.sh
Semester4/CNA/trade/: trade.py
Semester4/DOP/marvin/: build_jenkins.sh  job_dsl.groovy
Semester4/HUB/CMakeWorkshop/: CMakeLists.txt  hello  unit_test
Semester4/HUB/CMakeWorkshop/include/: ikea.h
Semester4/HUB/CMakeWorkshop/src/: CMakeLists.txt  hello_world.c
Semester4/HUB/CMakeWorkshop/src/lib/: CMakeLists.txt
Semester4/HUB/CMakeWorkshop/src/lib/ikea/: CMakeLists.txt  ikea.c
Semester4/HUB/CMakeWorkshop/tests/: CMakeLists.txt  test_ikea.c
Semester4/MAT/dowels/: main.py  process.py  tests.py
Semester4/MAT/iq/: process.py  results.py
Semester4/MAT/poll/: .gitignore  Makefile  main.py  process.py  tests.py
Semester4/NWP/myftp/: .gitignore  Makefile
Semester4/NWP/myftp/include/: client.h  execution.h  server.h
Semester4/NWP/myftp/lib/my/: Makefile  get_arraylen.c  linked_list.h  my.h  my_free_array.c  my_put_error.c  my_str_to_word_array.c
Semester4/NWP/myftp/lib/tests/: test_linked_lists.c  test_my_lib.c
Semester4/NWP/myftp/tests/: tests_check_args.c  tests_exec_base.c
Semester4/PSU/malloc/: Makefile
Semester4/PSU/malloc/include/: my_malloc.h
Semester4/PSU/malloc/src/: my_calloc.c  my_free.c  my_malloc.c  my_realloc.c
Semester4/PSU/nmobjdump/: Makefile
Semester4/PSU/nmobjdump/include/: nm.h  objdump.h
Semester4/YEP/Bomberman/: SaveFile.txt  bomberman
Semester4/YEP/Bomberman/doc/: warnings.txt
(+734 files in other folders)
